--- a/CSS/home.css
+++ b/CSS/home.css
@@ -103,11 +103,27 @@ main {
 }
 
 
+/* Blog carousel */
+
+.home_blogs {
+  width: 85%;
+  height: 336;
+  overflow: auto;
+  white-space: nowrap;
+  margin: auto;
+}
+
+.home_blogs .blog {
+  display: inline-block;
+  justify-content: center;
+}
+
+
 /* Blog posts */
 
 .blog {
   width: 300px;
-  margin: auto auto 60px auto;
+  margin: auto auto 15px auto;
 }
 
 .blog_image {
@@ -171,6 +187,7 @@ footer {
   color: #ffffff;
   justify-content: center;
   text-align: center;
+  margin-top: 60px;
   padding: 60px 0 80px 0;
 }
 
