--- a/CSS/home.css
+++ b/CSS/home.css
@@ -22,6 +22,7 @@
 .home_title {
   font-family: 'Comfortaa', cursive;
   font-weight: 600;
+  font-size: 2.2em;
   margin: 40px auto 30px auto;
 }
 
