--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -45,3 +45,19 @@ main {
   justify-content: center;
   text-align: center;
 }
+
+.input_box {
+  width: 300px;
+  height: 40px;
+  border-color: #7b7b7b;
+  border-radius: 10px;
+  margin: 15px auto 15px auto;
+  text-align: left;
+}
+
+#input_message {
+  height: 160px;
+}
+
+
+/* contact buttons */
