--- a/CSS/blogs.css
+++ b/CSS/blogs.css
@@ -18,3 +18,171 @@
 /*
   Main
 */
+
+.blog_title {
+  margin: 40px auto 30px auto;
+  text-align: center;
+  font-family: 'Comfortaa', cursive;
+  font-weight: 600;
+}
+
+.blog_intro {
+  margin: 10px auto 50px auto;
+  text-align: center;
+  width: 70%;
+  font-size: 1.1em;
+}
+
+
+/* filter */
+.blog_filter_mobile {
+  width: 300px;
+  margin: 10px auto;
+  border-radius: 10px;
+  padding: 17px 20px;
+  color: #000000;
+  background-color: #ffffff;
+  box-shadow: 0 4px 8px 0 #c8c8c8;
+  display: flex;
+}
+
+.filter_intro {
+  margin: auto 50px auto 10px;
+  font-size: 1.1em;
+}
+
+.fa-chevron-left {
+  margin: auto 10px auto 60px;
+}
+
+
+/* Blog posts */
+.blog_posts {
+  list-style-type: none;
+  width: 85%;
+  margin: 60px auto 50px auto;
+  display: flex;
+}
+
+.blog_posts:hover {
+  height: 380px;
+  transition: 0.5s ease-in-out;
+}
+
+.blog_posts .blog {
+  justify-content: center;
+}
+
+.blog {
+  width: 300px;
+  margin: 30px auto;
+}
+
+.blog:hover {
+  transform: scale(1.05);
+  transform-origin: top;
+  transition: 0.5s ease-in-out;
+}
+
+.blog_image {
+  width: 300px;
+  border-top-right-radius: 10px;
+  border-top-left-radius: 10px;
+}
+
+.blog_description {
+  background-color: #141414;
+  color: #ffffff;
+  padding: 20px 0 30px 0;
+  margin-top: -5px;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  text-align: center;
+}
+
+.blog_desc_text {
+  margin: auto auto 30px auto;
+}
+
+.blog_line {
+  width: 260px;
+  margin: auto;
+}
+
+.blog_line::after {
+  content: " ";
+  display: block;
+  border-bottom: 1px solid #ffffff;
+}
+
+.blog_date_and_more {
+  margin-top: 20px;
+  display: flex;
+  flex-direction: row;
+}
+
+.blog_desc_date {
+  width: 120px;
+  text-align: left;
+  margin: auto;
+  padding-left: 15px;
+}
+
+.blog_desc_more {
+  width: 120px;
+  text-align: right;
+  margin: auto;
+  padding-right: 15px;
+}
+
+
+/* Media querries for the carousel */
+@media (min-width: 700px) {
+  .blog_posts {
+    
+  }
+  .blog {
+    margin: auto 10px 15px 10px;
+  }
+}
+
+@media (min-width: 1000px) {
+  .blog {
+    margin: auto 20px 15px 20px;
+  }
+}
+
+
+/* Blog button */
+.blog_button {
+  width: 300px;
+  height: 100px;
+  color: #002A42;
+  background-color: #aac7df88;
+  margin: 20px auto;
+  border-radius: 15px;
+  justify-content: center;
+  text-align: center;
+}
+
+.button_text {
+  text-align: center;
+  text-decoration: none;
+  margin: 10px auto;
+  padding-top: 10px;
+}
+
+.button_line {
+  width: 120px;
+  margin: auto;
+}
+
+.button_line::after {
+  content: " ";
+  display: block;
+  border-bottom: 3px solid #002A42;
+}
+
+.blog_button .fa-chevron-left {
+  margin: 30px auto 10px auto;
+}
