--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -19,15 +19,10 @@
   Main
 */
 
-main {
-  justify-content: center;
-  text-align: center;
-}
-
 .contact_title {
+  margin: 40px auto 30px auto;
   font-family: 'Comfortaa', cursive;
   font-weight: 600;
-  margin: 40px auto 30px auto;
 }
 
 .big_text {
@@ -47,17 +42,100 @@ main {
 }
 
 .input_box {
-  width: 300px;
+  width: 80%;
   height: 40px;
   border-color: #7b7b7b;
   border-radius: 10px;
   margin: 15px auto 15px auto;
   text-align: left;
+  padding: 10px;
+  box-sizing: border-box;
 }
 
 #input_message {
   height: 160px;
+  border: solid 2px #7b7b7b;
+}
+
+/* Media querries for contact text boxes */
+@media (min-width: 700px) {
+  .input_box {
+    width: 70%;
+  }
+
+  #input_message {
+    height: 200px;
+  }
+}
+
+@media (min-width: 1000px) {
+  #input_name {
+    width: 45%;
+    margin-right: 25px;
+  }
+
+  #input_mail {
+    width: 55%;
+    margin-left: 25px;
+  }
+
+  .name_and_mail {
+    margin: auto;
+    display: flex;
+    width: 70%;
+  }
 }
 
 
 /* contact buttons */
+.contact_buttons {
+  width: 70%;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+
+.contact_buttons a {
+  font-family: 'inter', sans-serif;
+  font-weight: bold;
+  font-size: 1.2em;
+}
+
+.button_clear {
+  margin: 30px auto 10px auto;
+  padding: 12px 80px 12px 80px;
+  color: #ffffff;
+  background-color: #0074D9;
+  border-radius: 30px;
+  width: 210px;
+  text-decoration: none;
+}
+
+.button_submit {
+  margin: 10px auto 30px auto;
+  padding: 12px 72px 12px 72px;
+  color: #ffffff;
+  background-color: #002A42;
+  border-radius: 30px;
+  width: 210px;
+  text-decoration: none;
+}
+
+
+/* Media querries for contact buttons */
+@media (min-width: 700px) {
+  .contact_buttons {
+    display: flex;
+    flex-direction: row;
+    justify-content: right;
+  }
+
+  .button_clear {
+    margin: 30px 20px 30px 0;
+  }
+
+  .button_submit {
+    margin: 30px 0 30px 20px;
+  }
+}
