--- a/CSS/home.css
+++ b/CSS/home.css
@@ -131,15 +131,10 @@
 /* Blog carousel */
 .blog_posts {
   width: 85%;
-  height: 360px;
+  height: 380px;
   overflow: auto;
   white-space: nowrap;
-  margin: auto;
-}
-
-.blog_posts:hover {
-  height: 380px;
-  transition: 0.5s ease-in-out;
+  margin: auto auto -20px auto;
 }
 
 .blog_posts .blog {
@@ -152,12 +147,6 @@
 .blog {
   width: 300px;
   margin: auto auto 15px auto;
-}
-
-.blog:hover {
-  transform: scale(1.05);
-  transform-origin: top;
-  transition: 0.5s ease-in-out;
 }
 
 .blog_image {
@@ -222,6 +211,12 @@
   .blog {
     margin: auto 20px 15px 20px;
   }
+
+  .blog:hover {
+    transform: scale(1.05);
+    transform-origin: top;
+    transition: 0.5s ease-in-out;
+  }
 }
 
 
@@ -235,7 +230,7 @@
 
 .fa-chevron-left {
   color: #000000;
-  margin: 50px auto 20px auto;
+  margin: 50px 20px 20px 20px;
 }
 
 .carousel_buttons {
@@ -253,12 +248,27 @@
   transition: background-color 0.5s ease;
 }
 
+#prev:hover, #next:hover {
+  transform: scale(1.2);
+  transition: 0.5s ease;
+}
+
+#prev:hover {
+  transform-origin: center bottom;
+}
+
+#next:hover {
+  transform-origin: center bottom;
+}
+
+
+/*
 .dot:hover {
   background-color: #002A42;
   transform: scale(1.5);
   transition: 0.5s;
 }
-
+*/
 /*
 .scale {
   animation-name: slide;
