--- a/CSS/specific.css
+++ b/CSS/specific.css
@@ -19,6 +19,27 @@
   Main
 */
 
+.top_container {
+  position: relative;
+}
+
+.back_button {
+  position: absolute;
+  color: #000000;
+  background-color: #ffffff;
+  padding: 15px 30px;
+  top: 20px;
+  left: 30px;
+  font-family: 'inter', sans-serif;
+  font-size: 1.2em;
+  border: 3px solid #88a6b4;
+  border-radius: 30px;
+}
+
+.back_button .fa-chevron-left {
+  margin-right: 10px;
+}
+
 .specific_hero {
   width: 100%;
 }
@@ -38,6 +59,10 @@ main .specific_title {
   text-align: left;
   width: 85%;
   margin: 20px auto 30px auto;
+}
+
+.specific_description li {
+  font-family: 'inter', sans-serif;
 }
 
 .description_text {
