--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -41,8 +41,13 @@
   text-align: center;
 }
 
+.input {
+  width: 70%;
+  margin: auto;
+}
+
 .input_box {
-  width: 80%;
+  width: 100%;
   height: 40px;
   border-color: #7b7b7b;
   border-radius: 10px;
@@ -57,12 +62,18 @@
   border: solid 2px #7b7b7b;
 }
 
+/* Error messages */
+.form_error {
+  display: none;
+  font-family: 'inter', sans-serif;
+  color: #ee0000;
+  text-align: left;
+  margin: -10px auto 15px auto;
+}
+
+
 /* Media querries for contact text boxes */
 @media (min-width: 700px) {
-  .input_box {
-    width: 70%;
-  }
-
   #input_message {
     height: 200px;
   }
@@ -70,13 +81,12 @@
 
 @media (min-width: 1000px) {
   #input_name {
-    width: 45%;
-    margin-right: 25px;
+    width: 90%;
+    margin-right: 50px;
   }
 
   #input_mail {
-    width: 55%;
-    margin-left: 25px;
+    width: 100%;
   }
 
   .name_and_mail {
