--- a/CSS/blogs.css
+++ b/CSS/blogs.css
@@ -94,7 +94,7 @@
   font-size: 1.1em;
 }
 
-.fa-chevron-left {
+.blog_filter_mobile .filter_arrow {
   margin: auto 0 auto 70px;
   width: 29px;
   height: 29px;
@@ -104,7 +104,13 @@
   color: #ffffff;
   background: #0074D9;
   border-radius: 50%;
+  transition: 0.3s;
 }
+
+.blog_filter_mobile.open .filter_arrow {
+  transform: rotate(-180deg);
+}
+
 
 /* 
   Filter for desktop version 
@@ -112,7 +118,7 @@
 
 .blog_filter_desktop {
   width: 300px;
-  margin: 10px auto;
+  margin: 20px auto;
   padding-bottom: 20px;
   color: #000000;
   background-color: #ffffff;
@@ -120,12 +126,8 @@
   border-radius: 10px;
   list-style-type: none;
   display: none;
-  /*
-  height: 500px;
-  padding: 17px 20px;
-  display: flex;
   position: sticky;
-  top: 180px;*/
+  top: 180px;
 }
 
 .search_bar {
@@ -155,8 +157,12 @@
   margin: 20px 0 20px 30px;
 }
 
+/* When opening the filter */
+.blog_filter_mobile.open ~ .blog_filter_desktop {
+  display: block;
+}
+
 .desktop_item .checkbox {
-  /*background-color: #38a2ff56;*/
   display: flex;
   align-items: center;
   justify-content: center;
@@ -168,10 +174,21 @@
   transition: all 0.3s ease-in-out;
 }
 
+/* When clicking on item */
 .checkbox .fa-check {
   font-size: 12px;
   color: #0074D9;
   transform: scale(0);
+  transition: all 0.3s ease-in-out;
+}
+
+.desktop_item.checked .fa-check {
+  transform: scale(1);
+}
+
+.desktop_item.checked .checkbox {
+  background-color: #38a2ff56;
+  border-color: #38a2ff;
 }
 
 .item_text {
