--- a/CSS/home.css
+++ b/CSS/home.css
@@ -139,6 +139,10 @@
   flex-direction: row;
 }
 
+.posts {
+  margin: auto 2px;
+}
+
 .blog_posts .blog {
   display: inline-block;
   justify-content: center;
@@ -223,7 +227,7 @@
 }
 
 
-/* Carousel dots and arrows*/
+/* Carousel arrows*/
 .carousel {
   display: flex;
   flex-direction: row;
@@ -241,6 +245,22 @@
   margin: auto 30px auto 30px;
 }
 
+/* Buttons hover effects */
+.carousel_prev:hover, .carousel_next:hover {
+  transform: scale(1.2);
+  transition: 0.5s ease;
+}
+
+.carousel_prev:hover {
+  transform-origin: center bottom;
+}
+
+.carousel_next:hover {
+  transform-origin: center bottom;
+}
+
+/* Carousel dots */
+/*
 .dot {
   height: 10px;
   width: 10px;
@@ -256,18 +276,24 @@
   width: 15px;
   background-color: #002A42;
 }
+*/
 
-.carousel_prev:hover, .carousel_next:hover {
-  transform: scale(1.2);
-  transition: 0.5s ease;
+/* The progress container (grey background) */
+.carousel_bar {
+  width: 120px;
+  height: 8px;
+  background: #cccccc;
+  margin: 55px 10px 20px 10px;
+  border-radius: 30px;
 }
 
-.carousel_prev:hover {
-  transform-origin: center bottom;
-}
-
-.carousel_next:hover {
-  transform-origin: center bottom;
+/* The progress bar (scroll indicator) */
+.bar {
+  height: 8px;
+  background: #002A42;
+  width: 0%;
+  border-radius: 30px;
+  padding: 0 4px;
 }
 
 
