--- a/CSS/home.css
+++ b/CSS/home.css
@@ -138,10 +138,6 @@
   display: flex;
   flex-direction: row;
 }
-/*
-.blog_posts ::-webkit-scrollbar {
-  display: none;
-}*/
 
 .posts {
   margin: auto 2px;
@@ -219,6 +215,14 @@
 }
 
 @media (min-width: 1000px) {
+  .blog_posts {
+    overflow: hidden;
+  }
+
+  .blog_posts ::-webkit-scrollbar {
+    display: none;
+  }
+
   .blog {
     margin: auto 20px 15px 20px;
   }
