--- a/CSS/specific.css
+++ b/CSS/specific.css
@@ -92,6 +92,10 @@ main .specific_title {
   transition: 0.3s;
 }
 
+.image:hover {
+  opacity: 0.7;
+}
+
 /* Media querries for text and image */
 @media (min-width: 1000px) {
   .specific_sections {
@@ -111,7 +115,62 @@ main .specific_title {
 }
 
 /* Modal */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 100; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: #000000; /* Fallback color */
+  background-color: #000000e6; /* Black w/ opacity */
+}
 
+.modal_image {
+  margin: auto;
+  display: block;
+  width: 80%;
+  max-width: 700px;
+}
+
+/* Add Animation - Zoom in the Modal */
+.modal_image {
+  animation-name: zoom;
+  animation-duration: 0.6s;
+}
+
+@keyframes zoom {
+  from {transform:scale(0)}
+  to {transform:scale(1)}
+}
+
+/* The Close Button */
+.modal_close {
+  position: absolute;
+  top: 15px;
+  right: 35px;
+  color: #f1f1f1;
+  font-size: 40px;
+  font-weight: bold;
+  transition: 0.3s;
+}
+
+.modal_close:hover,
+.modal_close:focus {
+  color: #bbb;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+/* 100% Image Width on Smaller Screens */
+@media (max-width: 700px) {
+  .modal_image {
+    width: 100%;
+  }
+}
 
 
 footer .specific_title {
