--- a/CSS/home.css
+++ b/CSS/home.css
@@ -256,7 +256,6 @@
 }
 
 .fa-chevron-left {
-  color: #000000;
   margin: 50px 20px 20px 20px;
 }
 
@@ -266,7 +265,8 @@
 }
 
 .carousel_prev {
-  display: none;
+  /*display: none;*/
+  color: #fafafa;
 }
 /*
 .carousel_next {
@@ -308,5 +308,5 @@
 }
 
 .hidden {
-  display: none;
+  color: #fafafa;
 }
