--- a/CSS/subject.css
+++ b/CSS/subject.css
@@ -65,11 +65,6 @@
   background-color: #141414;
 }
 
-#climate_info {
-  color: #000000;
-  background-color: #fafafa;
-}
-
 .info {
   display: flex;
   flex-direction: column;
@@ -85,6 +80,10 @@
 
 .text_title {
   margin: 10px auto 20px auto;
+  font-family: 'inter', sans-serif;
+  font-size: 1.2em;
+  font-weight: 600;
+  text-decoration: underline;
 }
 
 .text_description {
