--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -66,7 +66,7 @@ main {
   border-color: #09c372;
 }
 
-.input.success textarea {
+.input.success #input_message {
   border: solid 2px #09c372;
 }
 
@@ -74,7 +74,7 @@ main {
   border-color: #ff3860;
 }
 
-.input.error textarea {
+.input.error #input_message {
   border: solid 2px #ff3860;
 }
 
