--- a/CSS/blogs.css
+++ b/CSS/blogs.css
@@ -87,6 +87,7 @@
   display: flex;
   position: sticky;
   top: 100px;
+  cursor: pointer;
 }
 
 .filter_intro {
@@ -380,6 +381,7 @@
   border-radius: 15px;
   justify-content: center;
   text-align: center;
+  cursor: pointer;
 }
 
 .button_text {
