--- a/CSS/specific.css
+++ b/CSS/specific.css
@@ -179,11 +179,27 @@ main .specific_title {
   Comment section
 */
 .comment_background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  z-index: 99;
   display: none;
 }
 
 .comment_section {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 400px;
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 5px;
   display: none;
+  z-index: 100;
 }
 
 .comment_container {
@@ -199,6 +215,7 @@ main .specific_title {
   border-radius: 200px;
   justify-content: center;
   float: right;
+  cursor: pointer;
 }
 
 .fa-message {
@@ -206,6 +223,7 @@ main .specific_title {
   margin: auto;
   color: #ffffff;
 }
+
 
 /*
   Footer
